--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,53 @@
 #title {
-    background-color: #ff4c68
+    background-color: #ff4c68;
+    color: #fff;
 }
 
 h1 {
     font-family: "Montserrat";
-    font-size: 3rem;
+    font-size: 3.5rem;
     line-height: 1.5;
+}
+
+body {
+    font-family: "Montserrat";
 }
 
 .container-fluid {
     padding: 3% 15%;
+}
+
+/* Navigation Bar */
+
+.navbar { 
+    padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+    font-family: "Ubuntu";
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.nav-item {
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-family: "Montserrat-Light";
+}
+
+/* Download Buttons */
+
+.download-button {
+    margin: 5% 3% 5% 0;
+}
+
+/* Title Image */
+
+.title-image {
+    width: 60%;
+    transform: rotate(25deg);
 }
