--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,6 @@ body {
 
 /* Testimonial Section */
 #testimonials {
-    padding: 7% 15%;
     text-align: center;
     color: white;
     background-color: #ef8172;
@@ -98,6 +97,10 @@ body {
     width: 10%;
     border-radius: 100%;
     margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
 }
 
 /* Press Section */
