--- a/css/styles.css
+++ b/css/styles.css
@@ -25,11 +25,11 @@ p {
 }
 
 body {
-    font-family: "Montserrat";
+    font-family: "Montserrat-Light";
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 /* Navigation Bar */
@@ -60,11 +60,13 @@ body {
     margin: 5% 3% 5% 0;
 }
 
-/* Title Image */
+/* Title */
 
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
 }
 
 /* Features */
@@ -75,6 +77,8 @@ body {
 
 #features {
     padding: 7% 15%;
+    background-color: white;
+    position: relative;
 }
 
 .pinkout {
@@ -118,4 +122,9 @@ body {
 /* Pricing Section */
 #pricing {
     padding: 100px;
+    text-align: center;
+}
+
+.pricing-column {
+    padding: 3% 2%;
 }
