add media query breakpoint for a responsive design

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,17 @@ body {
     right: 30%;
 }
 
+@media (max-width: 1028px){
+    .title-image {
+        transform: rotate(0);
+        position: static;
+    }
+
+    #title {
+        text-align: center;
+    }
+}
+
 /* Features */
 
 .feature {
