--- a/css/styles.css
+++ b/css/styles.css
@@ -145,14 +145,15 @@ body {
 
 #cta {
     background-color: #ff4c68;
+    color: #fff;
     text-align: center;
+    padding: 7% 22%;
 }
 
 .cta-text {
     font-family: "Montserrat-Black";
     font-size: 3rem;
     color: white;
-    padding: 5% 22% 0%;
 }
 
 /* Footer */
@@ -160,9 +161,9 @@ body {
 #footer {
     text-align: center;
     background-color: #fff;
-    padding: 8% 2%;
+    padding: 7% 15%;
 }
 
 .social-icon {
-    padding: 10px;
+    margin: 20px 10px;
 }
