--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,31 @@
-#title {
-    background-color: #ff4c68;
-    color: #fff;
+body {
+    font-family: "Montserrat-Light";
+    text-align: center;
 }
 
-h1 {
-    font-family: "Montserrat";
-    font-size: 3.5rem;
-    line-height: 1.5;
-}
-
-h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat-Bold";
-    font-size: 3rem;
-    line-height: 1.5;
-}
-
-h3 {
-    font-family: "Montserrat-Bold";
-    font-size: 1.5rem;
 }
 
 p {
     color: #8f8f8f;
 }
 
-body {
-    font-family: "Montserrat-Light";
+/* Headings */
+
+.big-heading {
+    font-family: "Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
 }
 
 .container-fluid {
-    padding: 3% 15% 7%;
+    padding: 7% 15%;
 }
 
 /* Navigation Bar */
 
-.navbar { 
+.navbar {
     padding: 0 0 4.5rem;
 }
 
@@ -54,13 +45,20 @@ body {
     font-family: "Montserrat-Light";
 }
 
-/* Download Buttons */
+/* Title */
 
-.download-button {
-    margin: 5% 3% 5% 0;
+#title {
+    background-color: #ff4c68;
+    color: #fff;
+    text-align: left;
+
 }
 
-/* Title */
+#title .container-fluid {
+    padding: 3% 15% 7%;
+}
+
+/* Title Image */
 
 .title-image {
     width: 60%;
@@ -69,7 +67,7 @@ body {
     right: 30%;
 }
 
-@media (max-width: 1028px){
+@media (max-width: 1028px) {
     .title-image {
         transform: rotate(0);
         position: static;
@@ -80,16 +78,21 @@ body {
     }
 }
 
-/* Features */
+/* Download Buttons */
 
-.feature {
-    text-align: center;
+.download-button {
+    margin: 5% 3% 5% 0;
 }
 
+/* Features */
+
 #features {
-    padding: 7% 15%;
     background-color: white;
     position: relative;
+}
+
+.feature-text {
+    font-size: 1.5rem;
 }
 
 .pinkout {
@@ -103,7 +106,6 @@ body {
 
 /* Testimonial Section */
 #testimonials {
-    text-align: center;
     color: white;
     background-color: #ef8172;
 }
@@ -114,14 +116,15 @@ body {
     margin: 20px;
 }
 
-.carousel-item {
-    padding: 7% 15%;
+.testimonial-text {
+    font-size: 3rem;
+    line-height: 1.5; 
 }
 
 /* Press Section */
+
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -134,7 +137,16 @@ body {
 
 #pricing {
     padding: 100px;
-    text-align: center;
+}
+
+.pricing-heading {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.pricing-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .pricing-column {
@@ -146,22 +158,12 @@ body {
 #cta {
     background-color: #ff4c68;
     color: #fff;
-    text-align: center;
-    padding: 7% 22%;
-}
-
-.cta-text {
-    font-family: "Montserrat-Black";
-    font-size: 3rem;
-    color: white;
 }
 
 /* Footer */
 
 #footer {
-    text-align: center;
     background-color: #fff;
-    padding: 7% 15%;
 }
 
 .social-icon {
